--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<!---<meta name="viewport" content="width=device-width, initial-scale=1">-->
 <title>夫妻档鲜蛤炒粿条</title>
 <meta name="description" content="">
 <meta name="author" content="">
