--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
           <p>我们的热炒有许多选项，任君挑选。<br>并且里头的鲜蛤都是不同于其他普通热炒档，<br>都是一颗颗新鲜并自剥的鲜蛤h</p>
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         <b><u><p style="color: black">我们在此</p></u></b>
-          <div class="mapouter"><div class="gmap_canvas text"><iframe width="660" height="471" id="gmap_canvas" src="https://maps.google.com/maps?q=LEONG%20HENG%20RESTAURANT%20Jalan%20Air%20Putih%2C%20Taman%20Imbi%2C%2025300%20Kuantan%2C%20Pahang&t=&z=7&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.bitgeeks.net/embed-google-map/">bitgeeks.net</a></div><style>.mapouter{position:relative;text-align:right;height:500px;width:660px;margin-left: 25%;margin-right:25%; }.gmap_canvas {overflow:hidden;background:none!important;height:471px;width:660px;margin:100px;}</style></div>
+          <div class="mapouter"><div class="gmap_canvas text"><iframe width="660" height="471" id="gmap_canvas" src="https://maps.google.com/maps?q=LEONG%20HENG%20RESTAURANT%20Jalan%20Air%20Putih%2C%20Taman%20Imbi%2C%2025300%20Kuantan%2C%20Pahang&t=&z=7&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.bitgeeks.net/embed-google-map/">bitgeeks.net</a></div><style>.mapouter{position:relative;text-align:right;height:500px;width:660px;margin-left: auto;margin-right:auto; }.gmap_canvas {overflow:hidden;background:none!important;height:471px;width:660px;}</style></div>
           <br><br><br><br><br><br><br><br>
                
           <button type="button" class="btn btn-info" style="margin-left: -15px"> 
@@ -159,7 +159,7 @@
               <br><br><br><br><br><br><br><br>
               <b><p style="color: black">此外我们也在Hungry 应用平台提供外卖服务</p></b>
               <p style="color: black">下载HUNGRY 应用程序，搜寻：<b>“SWEET COUPLE FRIED NOUDLE” </b>找到我们。 </p>
-              <img src="hungry.PNG" class="img-responsive" alt=""style="width: 650px; height:300px; margin-left:30%;">
+              <img src="hungry.PNG" class="img-responsive" alt=""style="width: 650px; height:300px; margin-left:auto; margin-right:auto;">
             </div>
     </div>
   </div>
